--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "ArturNista",
   "license": "MIT",
   "dependencies": {
+    "lodash": "^4.17.4",
     "moment": "^2.19.3",
     "restify": "^4.3.0",
     "rtc": "^3.4.0",
