--- a/site/package.json
+++ b/site/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "dependencies": {
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "socket.io-client": "^2.0.4"
   },
   "devDependencies": {
     "react-scripts": "1.0.17"
