--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "restify": "^4.3.0",
     "rtc": "^3.4.0",
     "rtc-quickconnect": "^5.8.1",
-    "socket.io": "^2.0.4",
-    "ws": "^3.3.2"
+    "socket.io": "^2.0.4"
   }
 }
