--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "author": "ArturNista",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.18.2",
+    "ejs": "^2.5.7",
+    "express": "^4.16.2",
     "lodash": "^4.17.4",
     "moment": "^2.19.3",
     "restify": "^4.3.0",
