Removed useless code

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "start": "nodemon --exec node server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "production": "node server.js"
   },
@@ -16,9 +17,6 @@
     "express": "^4.16.2",
     "lodash": "^4.17.4",
     "moment": "^2.19.3",
-    "nanotimer": "^0.3.15",
-    "rtc": "^3.4.0",
-    "rtc-quickconnect": "^5.8.1",
     "socket.io": "^2.0.4",
     "uuid": "^3.1.0"
   },
