--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.4",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "firebase-admin": "^5.13.1",
     "lodash": "^4.17.4",
     "moment": "^2.19.3",
     "socket.io": "^2.0.4",
