--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "cors": "^2.8.4",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "figlet": "^1.2.3",
     "firebase-admin": "^5.13.1",
     "lodash": "^4.17.4",
     "moment": "^2.19.3",
     "socket.io": "^2.0.4",
     "uuid": "^3.1.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "nodemon": "^1.19.1"
+  }
 }
