--- a/firebase/functions/package.json
+++ b/firebase/functions/package.json
@@ -9,8 +9,8 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
-    "firebase-admin": "~5.12.1",
-    "firebase-functions": "^1.0.3"
+    "firebase-admin": "^8.4.0",
+    "firebase-functions": "^3.2.0"
   },
   "private": true
 }
