--- a/firebase/functions/package.json
+++ b/firebase/functions/package.json
@@ -12,5 +12,8 @@
     "firebase-admin": "^8.4.0",
     "firebase-functions": "^3.2.0"
   },
-  "private": true
+  "private": true,
+  "engines": {
+    "node": "8"
+  }
 }
